# icc

./: CMakeLists.txt  CalculationEditorForm.ui  DispositionEditorForm.ui  EditorWindow.ui  MainWindow.ui  ParameterOverview.ui  README.md  SpecificationEditorForm.ui  qCalculationChildMDIWindow.cxx  qCalculationChildMDIWindow.h  qCalculationEditorForm.cxx  qCalculationEditorForm.h  qOasis.cxx  qOasis.qrc  qOasisMainWindow.cxx  qOasisMainWindow.h  qSpecificationChildMDIWindow.cxx  qSpecificationChildMDIWindow.h  qSpecificationEditorForm.cxx  qSpecificationEditorForm.h
